Fixed a small bug with the dashboard background image
- What are the relevant tickets?

none, but I introduced the change here: #181

- What's this PR do?

makes one css change to eliminate this strange gap.

- Where should the reviewer start?

changes:

	modified:   static/scss/layout.scss

- How should this be manually tested?

make sure it looks right!

- Any background context you want to provide?

- Screenshots (if appropriate)

before:
https://cloud.githubusercontent.com/assets/6207644/14540620/eef9e936-0253-11e6-8f14-5929e256fea6.png

after:
https://cloud.githubusercontent.com/assets/6207644/14540629/f44f45c0-0253-11e6-8d72-13ae5f3d8662.png

--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -144,6 +144,7 @@ body {
       .card-user {
         background-color: darkslategrey;
         background-image: url(/static/images/mit-stata-center.png);
+        background-position: 50% 50%;
         @include span-columns(12);
         .card-image-box {
           @include span-columns(2);
